Pushed deployment changes to docs

--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/test-exercise-movies-db/",
             "outputPath": "dist/yokoy-movies-db",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -105,6 +106,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
